// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts/Line Chart/Markers LinearValueMarkers smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="550"
     height="350"
     style="height: 350px; width: 550px;"
>
  <svg width="550"
       height="350"
       class="_svg_1u3dt_30 _areaChart_yyojn_1"
       tabindex="0"
  >
    <g transform="translate(22, 0)">
      <g style="pointer-events: none;">
        <line y1="317"
              y2="317"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="281.77777777777777"
              y2="281.77777777777777"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="246.55555555555557"
              y2="246.55555555555557"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="211.33333333333334"
              y2="211.33333333333334"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="176.11111111111111"
              y2="176.11111111111111"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="140.88888888888889"
              y2="140.88888888888889"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="105.66666666666667"
              y2="105.66666666666667"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="70.44444444444444"
              y2="70.44444444444444"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="35.222222222222236"
              y2="35.222222222222236"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="0"
              y2="0"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="26"
              x2="26"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="70"
              x2="70"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="114"
              x2="114"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="158"
              x2="158"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="202"
              x2="202"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="246"
              x2="246"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="290"
              x2="290"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="334"
              x2="334"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="378"
              x2="378"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="422"
              x2="422"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="466"
              x2="466"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="510"
              x2="510"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
      </g>
      <g transform="translate(0, 317)"
         visibility="visible"
      >
        <line x1="0"
              x2="528"
              y1="0"
              y2="0.00001"
              stroke-width="1"
              stroke="#8F979F"
        >
        </line>
        <g transform="translate(26, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Tue 18
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Tue 18
            </text>
          </g>
        </g>
        <g transform="translate(70, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Wed 19
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Wed 19
            </text>
          </g>
        </g>
        <g transform="translate(114, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Thu 20
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Thu 20
            </text>
          </g>
        </g>
        <g transform="translate(158, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Fri 21
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Fri 21
            </text>
          </g>
        </g>
        <g transform="translate(202, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Sat 22
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Sat 22
            </text>
          </g>
        </g>
        <g transform="translate(246, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Feb 23
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Feb 23
            </text>
          </g>
        </g>
        <g transform="translate(290, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Mon 24
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Mon 24
            </text>
          </g>
        </g>
        <g transform="translate(334, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Tue 25
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Tue 25
            </text>
          </g>
        </g>
        <g transform="translate(378, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Wed 26
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Wed 26
            </text>
          </g>
        </g>
        <g transform="translate(422, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Thu 27
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Thu 27
            </text>
          </g>
        </g>
        <g transform="translate(466, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Fri 28
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Fri 28
            </text>
          </g>
        </g>
        <g transform="translate(510, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Sat 29
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Sat 29
            </text>
          </g>
        </g>
      </g>
      <g transform="translate(0, 0)"
         visibility="visible"
      >
        <line x1="0"
              x2="0.00001"
              y1="317"
              y2="0"
              stroke-width="1"
              stroke="#8F979F"
        >
        </line>
        <g transform="translate(0, 317)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              0
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              0
            </text>
          </g>
        </g>
        <g transform="translate(0, 281.77777777777777)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              2
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              2
            </text>
          </g>
        </g>
        <g transform="translate(0, 246.55555555555557)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              4
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              4
            </text>
          </g>
        </g>
        <g transform="translate(0, 211.33333333333334)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              6
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              6
            </text>
          </g>
        </g>
        <g transform="translate(0, 176.11111111111111)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              8
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              8
            </text>
          </g>
        </g>
        <g transform="translate(0, 140.88888888888889)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              10
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              10
            </text>
          </g>
        </g>
        <g transform="translate(0, 105.66666666666667)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              12
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              12
            </text>
          </g>
        </g>
        <g transform="translate(0, 70.44444444444444)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              14
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              14
            </text>
          </g>
        </g>
        <g transform="translate(0, 35.222222222222236)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              16
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              16
            </text>
          </g>
        </g>
        <g transform="translate(0, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              18
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              18
            </text>
          </g>
        </g>
      </g>
      <defs>
        <clipPath id="area-series-linear-value-markers-path">
          <rect width="553"
                height="342"
                x="-12.5"
                y="-12.5"
          >
          </rect>
        </clipPath>
      </defs>
      <g>
        <rect height="317"
              width="528"
              opacity="0"
              cursor="auto"
        >
        </rect>
        <g clip-path="url(#area-series-linear-value-markers-path)">
          <path class
                pointer-events="none"
                stroke="#2b8dd8"
                stroke-width="3"
                fill="none"
                d="M0,105.667L176,158.5L396,246.556L528,299.389"
                stroke-dasharray="562.90753 562.90753"
                stroke-dashoffset="0"
          >
          </path>
          <path opacity="0"
                d="M0,105.667L176,158.5L396,246.556L528,299.389"
                pointer-events="none"
          >
          </path>
          <path class
                pointer-events="none"
                stroke="#2c77e0"
                stroke-width="3"
                fill="none"
                d="M0,105.667L176,176.111L396,193.722L528,35.222"
                stroke-dasharray="616.54529 616.54529"
                stroke-dashoffset="0"
          >
          </path>
          <path opacity="0"
                d="M0,105.667L176,176.111L396,193.722L528,35.222"
                pointer-events="none"
          >
          </path>
          <path class
                pointer-events="none"
                stroke="#2d60e8"
                stroke-width="3"
                fill="none"
                d="M0,0L176,264.167L396,70.444L528,0"
                stroke-dasharray="760.18396 760.18396"
                stroke-dashoffset="0"
          >
          </path>
          <path opacity="0"
                d="M0,0L176,264.167L396,70.444L528,0"
                pointer-events="none"
          >
          </path>
          <defs>
            <clipPath id="area-series-linear-value-markers-path">
              <rect width="553"
                    height="342"
                    x="-12.5"
                    y="-12.5"
              >
              </rect>
            </clipPath>
          </defs>
          <g clip-path="url(#area-series-linear-value-markers-path)">
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Syslog: 12"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2b8dd8"
                      cx="0"
                      cy="105.66666666666667"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Syslog: 9"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2b8dd8"
                      cx="176"
                      cy="158.5"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Syslog: 4"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2b8dd8"
                      cx="396"
                      cy="246.55555555555557"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Syslog: 1"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2b8dd8"
                      cx="528"
                      cy="299.38888888888886"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
          </g>
          <defs>
            <clipPath id="area-series-linear-value-markers-path">
              <rect width="553"
                    height="342"
                    x="-12.5"
                    y="-12.5"
              >
              </rect>
            </clipPath>
          </defs>
          <g clip-path="url(#area-series-linear-value-markers-path)">
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="DLP: 12"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2c77e0"
                      cx="0"
                      cy="105.66666666666667"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="DLP: 8"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2c77e0"
                      cx="176"
                      cy="176.11111111111111"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="DLP: 7"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2c77e0"
                      cx="396"
                      cy="193.72222222222223"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="DLP: 16"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2c77e0"
                      cx="528"
                      cy="35.222222222222236"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
          </g>
          <defs>
            <clipPath id="area-series-linear-value-markers-path">
              <rect width="553"
                    height="342"
                    x="-12.5"
                    y="-12.5"
              >
              </rect>
            </clipPath>
          </defs>
          <g clip-path="url(#area-series-linear-value-markers-path)">
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Threat Intel: 18"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2d60e8"
                      cx="0"
                      cy="0"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Threat Intel: 3"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2d60e8"
                      cx="176"
                      cy="264.1666666666667"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Threat Intel: 14"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2d60e8"
                      cx="396"
                      cy="70.44444444444444"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Threat Intel: 18"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2d60e8"
                      cx="528"
                      cy="0"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
          </g>
          <line stroke="#D740BE"
                stroke-width="1"
                x1="0"
                y1="105.66666666666667"
                x2="528"
                y2="105.66666666666667"
          >
          </line>
          <line stroke="#F8A340"
                stroke-width="1"
                x1="0"
                y1="211.33333333333334"
                x2="528"
                y2="211.33333333333334"
          >
          </line>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Line Chart/Markers RadialValueMarkers smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="500"
     style="height: 500px; width: 500px;"
>
  <svg width="500"
       height="500"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(250, 250)">
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="0.1"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="14.674999999999999"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="29.249999999999996"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="43.825"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="58.4"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="72.97500000000001"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="87.55"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="102.12500000000001"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="116.69999999999999"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="131.275"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="145.85000000000002"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="160.42499999999998"
              style="pointer-events: none;"
      >
      </circle>
      <circle fill="none"
              stroke-dasharray="1,4"
              stroke="#71808d"
              cx="0"
              cy="0"
              r="175"
              style="pointer-events: none;"
      >
      </circle>
      <g transform="rotate(-48.9795918367347) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(48.9795918367347, 15, 0)">
          <title>
            1/19/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            1/19/2020
          </text>
        </g>
      </g>
      <g transform="rotate(2.4489795918367463) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-2.4489795918367463, 15, 0)">
          <title>
            1/26/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            1/26/2020
          </text>
        </g>
      </g>
      <g transform="rotate(53.87755102040816) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-53.87755102040816, 15, 0)">
          <title>
            2/2/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="start"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            2/2/2020
          </text>
        </g>
      </g>
      <g transform="rotate(105.30612244897958) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-105.30612244897958, 15, 0)">
          <title>
            2/9/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            2/9/2020
          </text>
        </g>
      </g>
      <g transform="rotate(156.73469387755102) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-156.73469387755102, 15, 0)">
          <title>
            2/16/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            2/16/2020
          </text>
        </g>
      </g>
      <g transform="rotate(208.1632653061224) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-208.1632653061224, 15, 0)">
          <title>
            2/23/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            2/23/2020
          </text>
        </g>
      </g>
      <g transform="rotate(259.59183673469386) translate(175,0)">
        <line x1="-174.9"
              x2="0"
              stroke="rgba(113, 128, 141, .5)"
              style="pointer-events: none;"
        >
        </line>
        <g transform="rotate(-259.59183673469386, 15, 0)">
          <title>
            3/1/2020
          </title>
          <text dy="0.35em"
                x="15"
                text-anchor="end"
                fill="#71808d"
                font-family="sans-serif"
                font-size="11"
                startangle="0"
                endangle="6.283185307179586"
          >
            3/1/2020
          </text>
        </g>
      </g>
      <g>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <path d="M0,-175A175,175,0,1,1,0,175A175,175,0,1,1,0,-175M0,-0.1A0.1,0.1,0,1,0,0,0.1A0.1,0.1,0,1,0,0,-0.1Z"
              opacity="0"
              cursor="auto"
        >
        </path>
        <g clip-path="url(#radial-value-markers-path)">
          <path pointer-events="none"
                stroke="#2d60e8"
                fill="none"
                stroke-width="2"
                d="M20.993,-162.817C24.617,-160.139,17.352,-90.569,21.746,-82.928C26.14,-75.287,38.02,-107.78,47.357,-116.972C56.693,-126.163,73.321,-141.044,77.764,-138.077C82.206,-135.11,72.915,-107.667,74.012,-99.17C75.11,-90.673,81.216,-91.29,84.347,-87.095C87.478,-82.901,88.868,-77.615,92.796,-74.003C96.724,-70.39,106.096,-70.101,107.914,-65.418C109.732,-60.736,99.323,-50.172,103.706,-45.908C108.089,-41.644,137.993,-45.302,134.214,-39.834C130.434,-34.366,79.716,-18.98,81.03,-13.1C82.344,-7.221,148.491,-7.426,142.098,-4.557C135.704,-1.687,55.711,0.928,42.668,4.116C29.625,7.304,60,11.227,63.837,14.57C67.675,17.914,65.361,20.88,65.693,24.176C66.024,27.471,67.825,32.127,65.827,34.342C63.829,36.556,55.515,34.866,53.704,37.462C51.893,40.057,45.007,33.951,54.963,49.916C64.919,65.881,112.792,126.504,113.44,133.253C114.088,140.002,65.358,86.872,58.851,90.411C52.343,93.949,79.17,154.391,74.396,154.484C69.621,154.577,37.493,90.477,30.204,90.968C22.914,91.46,34.271,150.427,30.66,157.432C27.049,164.438,15.32,133.207,8.539,133.002C1.758,132.797,-4.008,154.762,-10.029,156.203C-16.049,157.644,-26.658,159.852,-27.586,141.648C-28.514,123.443,-11.427,52.378,-15.597,46.976C-19.767,41.574,-52.955,113.609,-52.606,109.237C-52.256,104.864,-6.451,20.367,-13.501,20.742C-20.552,21.117,-81.591,100.804,-94.911,111.488C-108.23,122.171,-99.669,96.747,-93.419,84.841C-87.169,72.934,-52.952,43.738,-57.412,40.048C-61.873,36.358,-121.095,66.188,-120.182,62.699C-119.27,59.21,-60.591,26.966,-51.935,19.112C-43.279,11.259,-72.795,18.366,-68.245,15.576C-63.695,12.787,-11.273,5.766,-24.635,2.376C-37.996,-1.013,-132.162,-1.072,-148.416,-4.759C-164.67,-8.447,-123.836,-13.699,-122.158,-19.749C-120.479,-25.8,-134.26,-33.531,-138.344,-41.06C-142.428,-48.589,-147.976,-58.585,-146.663,-64.923C-145.349,-71.261,-139.44,-77.574,-130.462,-79.087C-121.484,-80.6,-105.466,-77.814,-92.796,-74.003C-80.127,-70.191,-60.044,-55.331,-54.446,-56.22C-48.848,-57.109,-57.963,-70.38,-59.21,-79.336C-60.457,-88.292,-61.41,-97.53,-61.926,-109.955C-62.441,-122.381,-66.089,-147.295,-62.302,-153.886C-58.515,-160.477,-46.336,-149.931,-39.204,-149.501C-32.072,-149.071,-26.043,-159.219,-19.509,-151.309C-12.975,-143.399,-3.252,-110.761,0,-102.042C3.252,-93.323,-3.499,-88.866,0,-98.995C3.499,-109.124,17.369,-165.495,20.993,-162.817"
                opacity="1"
          >
          </path>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 13 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 16"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-98.995px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 14 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 44"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(20.993px) translateY(-162.817px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 15 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 12"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(21.746px) translateY(-82.928px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 16 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(47.357px) translateY(-116.972px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 17 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 41"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(77.764px) translateY(-138.077px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Jan 18 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 25"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(74.012px) translateY(-99.17px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Jan 19 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 24"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(84.347px) translateY(-87.095px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 20 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 23"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(92.796px) translateY(-74.003px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 21 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(107.914px) translateY(-65.418px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 22 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 21"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(103.706px) translateY(-45.908px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 23 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 32"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(134.214px) translateY(-39.834px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 24 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 11"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(81.03px) translateY(-13.1px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Jan 25 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 33"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(142.098px) translateY(-4.557px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Jan 26 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 3"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(42.668px) translateY(4.116px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Jan 27 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 7"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(63.837px) translateY(14.57px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Jan 28 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(65.693px) translateY(24.176px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Jan 29 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 9"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(65.827px) translateY(34.342px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Jan 30 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 7"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(53.704px) translateY(37.462px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Jan 31 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 9"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(54.963px) translateY(49.916px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 01 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 50"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(113.44px) translateY(133.253px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 02 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 19"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(58.851px) translateY(90.411px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 03 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 48"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(74.396px) translateY(154.484px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 04 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 15"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(30.204px) translateY(90.968px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 05 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 42"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(30.66px) translateY(157.432px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 06 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 29"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(8.539px) translateY(133.002px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 07 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 40"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-10.029px) translateY(156.203px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 08 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-27.586px) translateY(141.648px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 09 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 4"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-15.597px) translateY(46.976px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 10 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 24"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-52.606px) translateY(109.237px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 11 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 1"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-13.501px) translateY(20.742px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 12 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 35"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-94.911px) translateY(111.488px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 13 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-93.419px) translateY(84.841px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 14 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-57.412px) translateY(40.048px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 15 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 30"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-120.182px) translateY(62.699px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 16 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 5"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-51.935px) translateY(19.112px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 17 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 8"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-68.245px) translateY(15.576px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 18 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 1"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-24.635px) translateY(2.376px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 19 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 36"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-148.416px) translateY(-4.759px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 20 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 25"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-122.158px) translateY(-19.749px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 21 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 34"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-138.344px) translateY(-41.06px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 22 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 42"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-146.663px) translateY(-64.923px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Feb 23 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 38"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-130.462px) translateY(-79.087px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Feb 24 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 23"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-92.796px) translateY(-74.003px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2b8dd8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Tue Feb 25 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 10"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-54.446px) translateY(-56.22px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2aa1d1"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Wed Feb 26 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 16"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-59.21px) translateY(-79.336px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#29b5ca"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Thu Feb 27 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 26"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-61.926px) translateY(-109.955px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#28c8c3"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Fri Feb 28 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 45"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-62.302px) translateY(-153.886px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#27dcbc"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sat Feb 29 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 39"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-39.204px) translateY(-149.501px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#26efb5"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Sun Mar 01 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 38"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(-19.509px) translateY(-151.309px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2d60e8"
            >
            </circle>
          </g>
          <g class="_hidden_kwc4n_6"
             tabindex="0"
             aria-label="Mon Mar 02 2020 10:00:00 GMT+0200 (Eastern European Standard Time): 17"
             role="graphics-document"
             opacity="1"
             transform-origin="0px 0px"
             style="transform: translateX(0px) translateY(-102.042px); transform-origin: 0px 0px;"
          >
            <circle r="3"
                    fill="#2c77e0"
            >
            </circle>
          </g>
          <circle cx="0"
                  cy="0"
                  r="85.73218532149988"
                  fill="none"
                  stroke="#D740BE"
                  stroke-width="1"
          >
          </circle>
          <circle cx="0"
                  cy="0"
                  r="60.621850846043955"
                  fill="none"
                  stroke="#F8A340"
                  stroke-width="1"
          >
          </circle>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Line Chart/Markers RadialValueMarkersVertical smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="550"
     height="350"
     style="height: 350px; width: 550px;"
>
  <svg width="550"
       height="350"
       class="_svg_1u3dt_30 _areaChart_yyojn_1"
       tabindex="0"
  >
    <g transform="translate(22, 0)">
      <g style="pointer-events: none;">
        <line y1="317"
              y2="317"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="281.77777777777777"
              y2="281.77777777777777"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="246.55555555555557"
              y2="246.55555555555557"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="211.33333333333334"
              y2="211.33333333333334"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="176.11111111111111"
              y2="176.11111111111111"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="140.88888888888889"
              y2="140.88888888888889"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="105.66666666666667"
              y2="105.66666666666667"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="70.44444444444444"
              y2="70.44444444444444"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="35.222222222222236"
              y2="35.222222222222236"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line y1="0"
              y2="0"
              x1="0"
              x2="528"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="26"
              x2="26"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="70"
              x2="70"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="114"
              x2="114"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="158"
              x2="158"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="202"
              x2="202"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="246"
              x2="246"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="290"
              x2="290"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="334"
              x2="334"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="378"
              x2="378"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="422"
              x2="422"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="466"
              x2="466"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
        <line x1="510"
              x2="510"
              y1="0"
              y2="317"
              class="_gridLine_5yx3q_1"
              stroke-dasharray="2 5"
              stroke-width="1"
              stroke="rgba(153, 153, 153, 0.5)"
              fill="none"
        >
        </line>
      </g>
      <g transform="translate(0, 317)"
         visibility="visible"
      >
        <line x1="0"
              x2="528"
              y1="0"
              y2="0.00001"
              stroke-width="1"
              stroke="#8F979F"
        >
        </line>
        <g transform="translate(26, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Tue 18
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Tue 18
            </text>
          </g>
        </g>
        <g transform="translate(70, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Wed 19
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Wed 19
            </text>
          </g>
        </g>
        <g transform="translate(114, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Thu 20
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Thu 20
            </text>
          </g>
        </g>
        <g transform="translate(158, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Fri 21
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Fri 21
            </text>
          </g>
        </g>
        <g transform="translate(202, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Sat 22
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Sat 22
            </text>
          </g>
        </g>
        <g transform="translate(246, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Feb 23
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Feb 23
            </text>
          </g>
        </g>
        <g transform="translate(290, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Mon 24
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Mon 24
            </text>
          </g>
        </g>
        <g transform="translate(334, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Tue 25
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Tue 25
            </text>
          </g>
        </g>
        <g transform="translate(378, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Wed 26
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Wed 26
            </text>
          </g>
        </g>
        <g transform="translate(422, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Thu 27
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Thu 27
            </text>
          </g>
        </g>
        <g transform="translate(466, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Fri 28
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Fri 28
            </text>
          </g>
        </g>
        <g transform="translate(510, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="0"
                y1="0"
                y2="5"
          >
          </line>
          <g transform="translate(0, 10)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Sat 29
            </title>
            <text transform="rotate(-30)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Sat 29
            </text>
          </g>
        </g>
      </g>
      <g transform="translate(0, 0)"
         visibility="visible"
      >
        <line x1="0"
              x2="0.00001"
              y1="317"
              y2="0"
              stroke-width="1"
              stroke="#8F979F"
        >
        </line>
        <g transform="translate(0, 317)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              0
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              0
            </text>
          </g>
        </g>
        <g transform="translate(0, 281.77777777777777)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              2
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              2
            </text>
          </g>
        </g>
        <g transform="translate(0, 246.55555555555557)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              4
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              4
            </text>
          </g>
        </g>
        <g transform="translate(0, 211.33333333333334)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              6
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              6
            </text>
          </g>
        </g>
        <g transform="translate(0, 176.11111111111111)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              8
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              8
            </text>
          </g>
        </g>
        <g transform="translate(0, 140.88888888888889)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              10
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              10
            </text>
          </g>
        </g>
        <g transform="translate(0, 105.66666666666667)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              12
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              12
            </text>
          </g>
        </g>
        <g transform="translate(0, 70.44444444444444)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              14
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              14
            </text>
          </g>
        </g>
        <g transform="translate(0, 35.222222222222236)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              16
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              16
            </text>
          </g>
        </g>
        <g transform="translate(0, 0)">
          <line stroke-width="1"
                stroke="#8F979F"
                x1="0"
                x2="-5"
                y1="0"
                y2="0"
          >
          </line>
          <g transform="translate(-10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              18
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              18
            </text>
          </g>
        </g>
      </g>
      <defs>
        <clipPath id="area-series-radial-value-markers-vertical-path">
          <rect width="553"
                height="342"
                x="-12.5"
                y="-12.5"
          >
          </rect>
        </clipPath>
      </defs>
      <g>
        <rect height="317"
              width="528"
              opacity="0"
              cursor="auto"
        >
        </rect>
        <g clip-path="url(#area-series-radial-value-markers-vertical-path)">
          <path class
                pointer-events="none"
                stroke="#2b8dd8"
                stroke-width="3"
                fill="none"
                d="M0,105.667L176,158.5L396,246.556L528,299.389"
                stroke-dasharray="562.90753 562.90753"
                stroke-dashoffset="0"
          >
          </path>
          <path opacity="0"
                d="M0,105.667L176,158.5L396,246.556L528,299.389"
                pointer-events="none"
          >
          </path>
          <path class
                pointer-events="none"
                stroke="#2c77e0"
                stroke-width="3"
                fill="none"
                d="M0,105.667L176,176.111L396,193.722L528,35.222"
                stroke-dasharray="616.54529 616.54529"
                stroke-dashoffset="0"
          >
          </path>
          <path opacity="0"
                d="M0,105.667L176,176.111L396,193.722L528,35.222"
                pointer-events="none"
          >
          </path>
          <path class
                pointer-events="none"
                stroke="#2d60e8"
                stroke-width="3"
                fill="none"
                d="M0,0L176,264.167L396,70.444L528,0"
                stroke-dasharray="760.18396 760.18396"
                stroke-dashoffset="0"
          >
          </path>
          <path opacity="0"
                d="M0,0L176,264.167L396,70.444L528,0"
                pointer-events="none"
          >
          </path>
          <defs>
            <clipPath id="area-series-radial-value-markers-vertical-path">
              <rect width="553"
                    height="342"
                    x="-12.5"
                    y="-12.5"
              >
              </rect>
            </clipPath>
          </defs>
          <g clip-path="url(#area-series-radial-value-markers-vertical-path)">
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Syslog: 12"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2b8dd8"
                      cx="0"
                      cy="105.66666666666667"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Syslog: 9"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2b8dd8"
                      cx="176"
                      cy="158.5"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Syslog: 4"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2b8dd8"
                      cx="396"
                      cy="246.55555555555557"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Syslog: 1"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2b8dd8"
                      cx="528"
                      cy="299.38888888888886"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
          </g>
          <defs>
            <clipPath id="area-series-radial-value-markers-vertical-path">
              <rect width="553"
                    height="342"
                    x="-12.5"
                    y="-12.5"
              >
              </rect>
            </clipPath>
          </defs>
          <g clip-path="url(#area-series-radial-value-markers-vertical-path)">
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="DLP: 12"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2c77e0"
                      cx="0"
                      cy="105.66666666666667"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="DLP: 8"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2c77e0"
                      cx="176"
                      cy="176.11111111111111"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="DLP: 7"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2c77e0"
                      cx="396"
                      cy="193.72222222222223"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="DLP: 16"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2c77e0"
                      cx="528"
                      cy="35.222222222222236"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
          </g>
          <defs>
            <clipPath id="area-series-radial-value-markers-vertical-path">
              <rect width="553"
                    height="342"
                    x="-12.5"
                    y="-12.5"
              >
              </rect>
            </clipPath>
          </defs>
          <g clip-path="url(#area-series-radial-value-markers-vertical-path)">
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Threat Intel: 18"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2d60e8"
                      cx="0"
                      cy="0"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Threat Intel: 3"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2d60e8"
                      cx="176"
                      cy="264.1666666666667"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Threat Intel: 14"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2d60e8"
                      cx="396"
                      cy="70.44444444444444"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
            <g class="_hidden_jp2yc_5"
               tabindex="0"
               aria-label="Threat Intel: 18"
               role="graphics-document"
            >
              <circle class="_point_u68jv_1"
                      fill="#2d60e8"
                      cx="528"
                      cy="0"
                      r="4"
                      opacity="1"
                      style="cursor: pointer;"
              >
              </circle>
            </g>
          </g>
          <line stroke="#D740BE"
                stroke-width="1"
                x1="176"
                y1="0"
                x2="176"
                y2="317"
          >
          </line>
          <line stroke="#F8A340"
                stroke-width="1"
                x1="396"
                y1="0"
                x2="396"
                y2="317"
          >
          </line>
        </g>
      </g>
    </g>
  </svg>
</div>
`;
